# maxent-hs

./: maxent.cabal
Numeric/: MaxEnt.hs
Numeric/MaxEnt/: Train.hs
Numeric/MaxEnt/Train/: Enumerator.hs  Internal.hs
