Name:               maxent
Version:            0.0.1
License:            OtherLicense
License-File:       LICENSE
Copyright:          Daniël de Kok
Maintainer:         Daniël de Kok <me@danieldk.eu>
Author:             Daniël de Kok <me@danieldk.eu>
Category:           Numeric
Synopsis:           Maximum entropy model parameter estimator
Description:        Estimate parameters for maximum entropy models.
Build-Type:         Simple
Cabal-Version:      >= 1.4

Library
  Build-Depends:        base >= 4 && < 5, array >= 0.3.0.2,
                        containers >= 0.4.0.0, lbfgs >= 0.0.4,
                        vector >= 0.7.0.1
  Exposed-modules:      Numeric.MaxEnt, Numeric.MaxEnt.Train
